--- a/index.html
+++ b/index.html
@@ -162,7 +162,7 @@
 <section style="text-align:center;">
   <h2>Order Sekarang</h2>
   <p>Bayar via DANA • Proses cepat • Aman</p>
-  <a class="btn" href="https://web.telegram.org/a/" target="_blank">Order via Telegram</a>
+  <a class="btn" href="https://t.me/alwandigidev" target="_blank">Order via Telegram</a>
 </section>
 
 <footer>
