--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="id">
+<meta name="google-site-verification" content="dnRLy-stGeWHvU8Ci-qEo9dE3oeYXoNBAKvHo_MR_xQ" />
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
